# graphics-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
includes/: Camera.hpp  Chemisty.hpp  ComponentSomething.hpp  Entity.hpp  EntityComponentSystem.hpp  FontRenderer.hpp  Geometry.hpp  Input.hpp  Model.hpp  Object.hpp  ParticleSystem.hpp  Renderer.hpp  Transform.hpp  Window.hpp
includes/gl_classes/: FBO.hpp  Shader.hpp  Texture.hpp  VAO.hpp
src/: Camera.cpp  Cubemap.cpp  EBO.cpp  FBO.cpp  FontRenderer.cpp  IMAGE.cpp  Input.cpp  Main.cpp  Object.cpp  PANEL.cpp  RBO.cpp  Renderer.cpp  Shader.cpp  TEXT.cpp  Texture.cpp  Transform.cpp  UI_ELEMENT.cpp  VAO.cpp  VBO.cpp  Window.cpp
src/buffers/: EBO.cpp  FBO.cpp  VAO.cpp  VBO.cpp
src/core/: Camera.cpp  Input.cpp  Main.cpp  Object.cpp  Transform.cpp  Window.cpp
src/graphics/: FontRenderer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/headers/: Camera.hpp  Geometry.hpp  IMAGE.hpp  Model.hpp  Object.hpp  PANEL.hpp  Renderer.hpp  TEXT.hpp  Transform.hpp  UI_ELEMENT.hpp
src/headers/gl_classes/: Cubemap.hpp  FBO.hpp  RBO.hpp  Shader.hpp  Texture.hpp
